Correct button dark mode bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@
 }
 
 .mz_dark-btn {
-  @apply text-black hover:text-white bg-white/50 hover:bg-brand-primary-500 dark:bg-white/5 dark:text-white dark:hover:border-brand-primary-400 dark:hover:bg-brand-primary-500/30 opacity-100 hover:opacity-100;
+  @apply text-black hover:text-white bg-white/80 hover:bg-brand-primary-500 dark:bg-dark-btn dark:text-white dark:hover:border-brand-primary-400 dark:hover:bg-brand-primary-500/70 opacity-100 hover:opacity-100;
 }
 
 .mz_btn-submit {
